FIX #190 Album covers not being rounded edge in latest played

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,7 +22,7 @@
     --scrollbar-vertical-size: 8px;
     --cover-border-radius: 8px;
     --playbar-movement-anim-speed: 0.5s;
-    --image-radius: 10px;
+    --image-radius: 4px;
     --sidebar-icons-border-radius: 50vh; // 50vh = round / pill
     --song-transition-speed: 3s;
     --is_dark: calc(1 - var(--is_light));
